samples/_failures_safe/1761372836_9709d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f7f71a2.c: In function ‘main’:
./samples/SAFE/__tmp_8f7f71a2.c:165:26: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  165 |     print_tokens(tokens, token
      |                          ^~~~~
      |                          Token
./samples/SAFE/__tmp_8f7f71a2.c:165:26: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8f7f71a2.c:165:31: error: expected ‘)’ at end of input
  165 |     print_tokens(tokens, token
      |                 ~             ^
      |                               )
./samples/SAFE/__tmp_8f7f71a2.c:165:5: error: expected declaration or statement at end of input
  165 |     print_tokens(tokens, token
      |     ^~~~~~~~~~~~
